final project finalized

--- a/recipes/lapping.html
+++ b/recipes/lapping.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FavRecipe</title>
+    <link rel="stylesheet" href="stylesrecetas.css"/>
 </head>
+
 <body>
-    <h1>Lapping</h1>
-    <img src="../images /lapping.jpg" height="200" alt="Lapping delicioso">
-    <p> El <strong>lapping cochabambino</strong>, es un plato típico de Cochabamba que combina 
+    <div class="intro">
+    <div class="left lapping">Lapping
+    <img src="../images/lapping.jpg" alt="Lapping delicioso">
+    </div>
+    <div class="right"> El lapping cochabambino, es un plato típico de Cochabamba que combina 
         carne de pecho de res bien sazonada, mote de habas, papa imilla cocida con cáscara, choclo con anís y 
-            una deliciosa ensalada fresca o <em>k'allu</em> con tomate, cebolla y quirquiña.</p>
-    <h4>Tiempo de preparación: 45 min</h4>
-    <h4>Tiempo de cocción: 1 h 25 min</h4>
-    <h4>Serving: 4 personas</h4>
-    <h3>Ingredientes</h3>
+            una deliciosa ensalada fresca o k'allu con tomate, cebolla y quirquiña.</div>
+     </div>
+
+     <div class="info">
+    <h4 class="uno">Tiempo de preparación: 45 min</h4>
+    <h4 class="dos">Tiempo de cocción: 1 h 25 min</h4>
+    <h4 class="tres">Serving: 4 personas</h4>
+    </div>
+    
+    <div class="steps">
+    <div class="ing">
+    <h3 >Ingredientes</h3>
     <ul>
         <li>1.5 kilos de carne de pecho de vaca fileteada</li>
         <li>1 cebolla picada finamente</li>
@@ -27,6 +38,9 @@
         <li>Pimienta y sal al gusto</li>
         <li>Aceite vegetal</li>
     </ul>
+    </div>
+
+    <div class="elab">
     <h3>Elaboración</h3>
     <ol>
         <li>Cocer los acompañamientos: En una olla grande con agua y sal, cocina las papas imilla con cáscara hasta que estén suaves y apenas se abran (florezcan). Escúrrelas y resérvalas calientes.</li>
@@ -40,7 +54,12 @@
         <li>Añade una buena porción de ensalada fresca <em>(k'allu)</em>hecha con tomate, cebolla, quilquiña, locoto y quesillo. Si deseas, sirve la ensalada aparte en un pequeño platillo.</li>
     </ol>
     <h5><em>Notas</em>: Para lograr una carne aún más suave, puedes marinarla la noche anterior con un poco de <em>papaya rallada</em>, como hacían nuestras abuelas. Este truco ayuda a ablandar la fibra de la carne y le da un sabor único. </h5>
-   
-    <h2><a href="../index.html">Mis Recetas </a></h2>
+   </div>
+
+</div>
+
+    <div class="footer">
+    <a href="../index.html">Mis Recetas </a>
+    </div>
 </body>
 </html>
