--- a/index.html
+++ b/index.html
@@ -4,18 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Odin Recipes</h1>
-    
-    <ul>
-        <h2><li><a href="recipes/lapping.html">Lapping</a></li></h2>
-        <img src="images /lapping.jpg" height="100">
-        <h2><li><a href="recipes/sopademani.html">Sopa de Maní</a></li></h2>
-        <img src="images /sopademani.jpg" height="100">
-        <h2><li><a href="recipes/piquemacho.html">Pique Macho</a></li></h2>
-        <img src="images /piquemacho.jpg" height="100">
-    </ul>
+    <div class="titulo">
+        <img src="images/TOPlogo.png" height="100">
+    <h1>Mi Libro De Recetas
+      <img src="images/bolivia.png" width="150">
+    </h1>
+    </div>
+
+    <div class="recetas">
+
+        <div class="receta uno">
+        <img src="images/lapping.jpg" width="200">
+        <a href="recipes/lapping.html">Lapping</a>
+        </div>
+
+        <div class="receta dos">
+        <img src="images/sopademani.jpg" width="200">
+        <a href="recipes/sopademani.html">Sopa de Maní</a>
+        </div>
+
+        <div class="receta tres">
+        <img src="images/piquemacho.jpg" width="200">
+        <a href="recipes/piquemacho.html">Pique Macho</a>
+        </div>
+
+     </div>   
     
 </body>
 </html>
