--- a/recipes/piquemacho.html
+++ b/recipes/piquemacho.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFAVFAV</title>
+    <link rel="stylesheet" href="stylesrecetas.css"/>  
 </head>
+
 <body>
-    <h1>Pique Macho</h1>
-    <img src="../images /piquemacho.jpg" height="200" alt="Pique macho es lo max!">
-    <p> El <b>Pique a lo Macho Macho</b> es una plato bandera de todos los Bolivianos, ideal para los amantes del sabor 
+    <div class="intro">
+    <div class="left pique-macho">Pique Macho
+    <img src="../images/piquemacho.jpg" alt="Pique macho es lo max!">
+    </div>
+    <div class="right"> El Pique a lo Macho Macho es una plato bandera de todos los Bolivianos, ideal para los amantes del sabor 
         fuerte y picante. Esta receta combina carne de res, salchichas, papas fritas, cebolla, tomate y un toque extra 
-        de ají locoto, todo salteado con especias típicas</p>
-    <h4>Tiempo de preparación: 25 min</h4>
-    <h4>Tiempo de cocción: 35 min</h4>
-    <h4>Serving: 6 personas</h4>
+        de ají locoto, todo salteado con especias típicas</div>
+    </div>
+
+    <div class="info">
+    <h4 class="uno">Tiempo de preparación: 25 min</h4>
+    <h4 class="dos">Tiempo de cocción: 35 min</h4>
+    <h4 class="tres">Serving: 6 personas</h4>
+    </div>
+
+    <div class="steps">
+    <div class="ing">
     <h3>Ingredientes</h3>
     <ul>
         <li>1 kg de carne</li>
@@ -30,6 +41,9 @@
         <li>Pimienta y sal al gusto</li>
         <li>Mayonesa, mostaza y ketchup al gusto</li>
     </ul>
+    </div>
+
+    <div class="elab">
     <h3>Elaboración</h3>
     <ol>
         <li>Empezamos cortando la carne blanda, separamos en pedazos grandes en forma de tiras.</li>
@@ -43,6 +57,11 @@
         <li>En un sartén retostamos los chorizos un poco y luego mezclamos con la carne.</li>
         <li>Servimos  muestro pique macho, primero colocar la papa luego la carne y  echamos el jugo, colocamos el chorizo, luego colocar la cebolla tomate y los locotos y por ultimo colocar los huevos en rodajas.<em>Esto se acompaña con  aderezos: mayonesa, mostaza y kétchup.</em></li>  
     </ol>
-    <h2><a href="../index.html">Mis Recetas</a></h2>
+    </div>
+    </div>
+
+    <div class="footer">
+    <a href="../index.html">Mis Recetas</a>
+    </div>
 </body>
 </html>
