--- a/recipes/sopademani.html
+++ b/recipes/sopademani.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FavAbuelitaRecipe</title>
+    <link rel="stylesheet" href="stylesrecetas.css"/>
 </head>
+
 <body>
-    <h1>Sopa de Maní</h1>
-    <img src="../images /sopademani.jpg" height="200" alt="Sopa de mani my fav #namnam">
-    <p> La  <b>sopa de maní boliviana</b>, una delicia tradicional que combina el sabor suave y cremoso del maní con tiernos trozos de carne y verduras. 
-        Esta sopa se enriquece con especias autóctonas, creando un caldo reconfortante y nutritivo</p>
-    <h4>Tiempo de preparación: 25 min</h4>
-    <h4>Tiempo de cocción: 1 h 25 min</h4>
-    <h4>Serving: 6 personas </h4>
-    <h3>Ingredientes</h3>
-    <ul>
+    <div class="intro">
+        <div class="left sopa-de-mani">Sopa de Maní
+        <img src="../images/sopademani.jpg" alt="Sopa de mani my fav #namnam">
+        </div>
+        <div class="right"> La sopa de maní boliviana, una delicia tradicional que combina el sabor suave y cremoso del maní con tiernos trozos de carne y verduras. 
+        Esta sopa se enriquece con especias autóctonas, creando un caldo reconfortante y nutritivo
+        </div>
+    </div>
+
+    <div class="info">
+        <h4 class="uno">Tiempo de preparación: 25 min</h4>
+        <h4 class="dos">Tiempo de cocción: 1 h 25 min</h4>
+        <h4 class="tres">Serving: 6 personas </h4>
+    </div>
+
+     <div class="steps">
+        <div class="ing">
+        <h3>Ingredientes</h3>
+        <ul>
         <li>100 gramos de maní crudo licuado finamente</li>
         <li>1 cebolla grande picada</li>
         <li>1 pimentón verde picado</li>
@@ -28,9 +40,12 @@
         <li>1 dientes de ajo picado</li>
         <li>Pimienta y sal al gusto</li>
         <li>1 cucharadita de orégano</li>
-    </ul>
+        </ul>
+    </div>
+
+    <div class="elab">
     <h3>Elaboración</h3>
-    <ol>
+        <ol>
         <li>En un recipiente grande, remoja el maní en agua caliente durante 5 minutos y luego cuélalo.</li>
         <li>Licuar la mitad del maní con 2 tazas de agua durante 2 a 3 minutos, o hasta obtener una mezcla suave. Repite este paso con la otra mitad del maní.</li>
         <li>En una olla grande, sella el pollo en aceite vegetal a fuego alto. Retira el pollo de la olla y resérvalo mientras preparas el resto de la receta.</li>
@@ -39,7 +54,12 @@
         <li>Añade la sal, la pimienta y el orégano.</li>
         <li>Después de los 20 minutos, agrega las presas de pollo y cocina durante 15 minutos o hasta que el pollo esté completamente cocido.</li>
 
-    </ol>
-    <h2><a href="../index.html">Mis Recetas</a></h2>
+        </ol>
+    </div>
+
+     </div>
+     <div class="footer">
+    <a href="../index.html">Mis Recetas</a>
+    </div>
 </body>
 </html> 
